# offroad_autonomous_navigation

./: .gitignore  README.md  all_topics.pkl  extract_dataset  make_alltopic_file.py  metrics.py  nn_model.py  plot_uncertainty.py  read_tensorflow.py  training_samples.txt  traj_planner_eval.py  traj_planner_helpers.py  traj_planner_train.py  traj_planner_visualize.py  traj_unc.py  validation_samples.txt
MHE_MPC/: config.py  config_lucas.py  hybrid_controller.py  system_identification.py
classifier/: augment_test.py  eval.py  format_data.py  train.py  train_test_split.py
dataset_preparation/: GUI_annotator.py
extract_dataset/: CMakeLists.txt  analyze.py  analyze_annotations.py  analyze_annotations_per_bag.py  analyze_data.py  package.xml  rc_subscriber.py  rc_subscriber_node.py  read_data.py  sanity_check.py
extract_dataset/config/: config.yaml
models/: nn_model.py
planner_pkg/: CMakeLists.txt  package.xml
planner_pkg/src/: config.py  customized_optimizerv2.py  hybrid_controller_may8_2024.py  hybrid_controller_uncertainty_included.py
